public class Pago {
    private String idPago;
    private Date fechaPago;
    private String metodo;
    private String comprobanteTransferencia;
    private double valorPagado;

}