package fis.dsw.sgc.finanzas.model;

public interface ITipoDeuda {
    double calcularValor(double valorBase);
    String getMotivo();


}
