package fis.dsw.sgc.finanzas.model;

public interface ITipoPago {
    String getMetodo(); // Interfaz que define el comportamiento según el tipo de pago
}