package fis.dsw.sgc.finanzas.service;

import fis.dsw.sgc.finanzas.model.Pago;

public class PagoFactory implements IPagoFactory {
    @Override
    public Pago crearPago(int idDeuda, double valor, String metodo) {
        // Lógica de creación DEJAR EN BLANCO[cite: 1, 2]
        return null;
    }
}